templates/scribe_template.yaml
---
# Source: scribe/charts/mysql/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: scribe-mysql
  namespace: "default"
  labels:
    app.kubernetes.io/name: mysql
    helm.sh/chart: mysql-9.3.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mysql
      app.kubernetes.io/instance: release-name
  ingress:
    # Allow inbound connections
    - ports:
        - port: 3306
    # Allow prometheus scrapes
    - ports:
        - port: 9104
---
# Source: scribe/charts/mysql/templates/metrics-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: scribe-mysql-metrics
  namespace: "default"
  labels:
    app.kubernetes.io/name: mysql
    helm.sh/chart: mysql-9.3.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: metrics
  annotations:
    prometheus.io/port: '9104'
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
    - port: 9104
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/name: mysql
    app.kubernetes.io/instance: release-name
---
# Source: scribe/charts/mysql/templates/primary/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: scribe-mysql-headless
  namespace: "default"
  labels:
    app.kubernetes.io/name: mysql
    helm.sh/chart: mysql-9.3.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
  annotations:
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
  selector: 
    app.kubernetes.io/name: mysql
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: primary
---
# Source: scribe/charts/mysql/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: scribe-mysql
  namespace: "default"
  labels:
    app.kubernetes.io/name: mysql
    helm.sh/chart: mysql-9.3.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
  annotations:
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: mysql
      nodePort: null
  selector: 
    app.kubernetes.io/name: mysql
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: primary
---
# Source: scribe/charts/omnirpc/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scribe-omnirpc
  labels:
    helm.sh/chart: omnirpc-0.2.92
    app.kubernetes.io/name: omnirpc
    app.kubernetes.io/instance: release-name
    
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5080
    - name: prometheus
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: omnirpc
    app.kubernetes.io/instance: release-name
---
# Source: scribe/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-scribe
  labels:
    helm.sh/chart: scribe-0.2.16
    app.kubernetes.io/name: scribe
    app.kubernetes.io/instance: release-name
    
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5080
  selector:
    app.kubernetes.io/name: scribe
    app.kubernetes.io/instance: release-name
    scribe-type: server
---
# Source: scribe/charts/omnirpc/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scribe-omnirpc
  labels:
    helm.sh/chart: omnirpc-0.2.92
    app.kubernetes.io/name: omnirpc
    app.kubernetes.io/instance: release-name
    
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: omnirpc
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        checksum/config: 521451319412b44e6832cfd671fbff70c26bee509aef1e4730fa1da3e675ec42
      labels:
        app.kubernetes.io/name: omnirpc
        app.kubernetes.io/instance: release-name
        
    spec:
      serviceAccountName: scribe-omnirpc
      securityContext:
        {}
      containers:
        - name: omnirpc
          securityContext:
            {}
          image: "ghcr.io/synapsecns/sanguine/omnirpc:latest"
          imagePullPolicy: Always
          args:
            - server
            - --port=5080
            - --config=/config/config.yml
          ports:
            - containerPort: 5080
              name: http
            - containerPort: 8080
              name: prometheus
          livenessProbe:
            httpGet:
              path: /health-check
              port: http
          readinessProbe:
            httpGet:
              path: /health-check
              port: http
          resources:
            {}
          volumeMounts:
            - name: configmap
              mountPath: /config
      volumes:
        - name: release-name-config
          emptyDir: {}
        - name: configmap
          configMap:
            name: scribe-omnirpc-release-name
---
# Source: scribe/templates/indexer_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-scribe-indexer
  labels:
    helm.sh/chart: scribe-0.2.16
    app.kubernetes.io/name: scribe
    app.kubernetes.io/instance: release-name
    
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: scribe
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        checksum/config: e83345ff9ff48467f093027021abd569a64c4f5c869fa03ef026cb73c9d8ffb1
      labels:
        app.kubernetes.io/name: scribe
        app.kubernetes.io/instance: release-name
        
        scribe-type: indexer
    spec:
      serviceAccountName: release-name-scribe
      securityContext:
        {}
      containers:
        - name: scribe
          securityContext:
            {}
          image: "ghcr.io/synapsecns/sanguine/scribe:latest"
          imagePullPolicy: Always
          args:
            - scribe
            - --db=mysql
            - --path=root:MysqlPassword@tcp(scribe-mysql:3306)/scribe?parseTime=true
            - --config=/config/config.yaml
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            {}
          volumeMounts:
            - name: configmap
              mountPath: /config
      volumes:
        - name: release-name-config
          emptyDir: {}
        - name: configmap
          configMap:
            name: release-name-scribe-release-name
---
# Source: scribe/templates/server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-scribe-server
  labels:
    helm.sh/chart: scribe-0.2.16
    app.kubernetes.io/name: scribe
    app.kubernetes.io/instance: release-name
    
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: scribe
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        checksum/config: e83345ff9ff48467f093027021abd569a64c4f5c869fa03ef026cb73c9d8ffb1
      labels:
        app.kubernetes.io/name: scribe
        app.kubernetes.io/instance: release-name
        
        scribe-type: server
    spec:
      serviceAccountName: release-name-scribe
      securityContext:
        {}
      containers:
        - name: scribe
          securityContext:
            {}
          image: "ghcr.io/synapsecns/sanguine/scribe:latest"
          imagePullPolicy: Always
          args:
            - server
            - --port=5080
            - --db=mysql
            - --path=root:MysqlPassword@tcp(scribe-mysql:3306)/scribe?parseTime=true
            - --omnirpc=http://scribe-omnirpc
          ports:
            - containerPort: 5080
              name: http
          livenessProbe:
            httpGet:
              path: /health-check
              port: http
          readinessProbe:
            httpGet:
              path: /health-check
              port: http
          volumeMounts:
            - name: configmap
              mountPath: /config
          resources:
            {}
      volumes:
        - name: release-name-config
          emptyDir: {}
        - name: configmap
          configMap:
            name: release-name-scribe-release-name
---
# Source: scribe/charts/mysql/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: scribe-mysql
  namespace: "default"
  labels:
    app.kubernetes.io/name: mysql
    helm.sh/chart: mysql-9.3.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
spec:
  replicas: 1
  podManagementPolicy: ""
  selector:
    matchLabels: 
      app.kubernetes.io/name: mysql
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: primary
  serviceName: scribe-mysql
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/configuration: e8b77da3664c7bb0d55ef9983f69017fe9e1e9aecbe4c04cde32d4d8ad4bbd8d
      labels:
        app.kubernetes.io/name: mysql
        helm.sh/chart: mysql-9.3.2
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: primary
    spec:
      serviceAccountName: scribe-mysql
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: mysql
                    app.kubernetes.io/instance: release-name
                namespaces:
                  - "default"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      containers:
        - name: mysql
          image: docker.io/bitnami/mysql:8.0.30-debian-11-r15
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          ports:
            - name: mysql
              containerPort: 3306
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MYSQL_ROOT_PASSWORD:-}"
                  if [[ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MYSQL_ROOT_PASSWORD_FILE")
                  fi
                  mysqladmin status -uroot -p"${password_aux}"
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MYSQL_ROOT_PASSWORD:-}"
                  if [[ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MYSQL_ROOT_PASSWORD_FILE")
                  fi
                  mysqladmin status -uroot -p"${password_aux}"
          startupProbe:
            failureThreshold: 10
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MYSQL_ROOT_PASSWORD:-}"
                  if [[ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MYSQL_ROOT_PASSWORD_FILE")
                  fi
                  mysqladmin status -uroot -p"${password_aux}"
          resources: 
            limits: {}
            requests: {}
          volumeMounts:
            - name: data
              mountPath: /bitnami/mysql
            - name: config
              mountPath: /opt/bitnami/mysql/conf/my.cnf
              subPath: my.cnf
        - name: metrics
          image: docker.io/bitnami/mysqld-exporter:0.14.0-debian-11-r33
          imagePullPolicy: "IfNotPresent"
          command:
            - /bin/bash
            - -ec
            - |
              password_aux="${MYSQL_ROOT_PASSWORD:-}"
              if [[ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]]; then
                  password_aux=$(cat "$MYSQL_ROOT_PASSWORD_FILE")
              fi
              DATA_SOURCE_NAME="root:${password_aux}@(localhost:3306)/" /bin/mysqld_exporter
          ports:
            - name: metrics
              containerPort: 9104
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              path: /metrics
              port: metrics
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              path: /metrics
              port: metrics
          resources:
            limits: {}
            requests: {}
      volumes:
        - name: config
          configMap:
            name: scribe-mysql
  volumeClaimTemplates:
    - metadata:
        name: data
        labels: 
          app.kubernetes.io/name: mysql
          app.kubernetes.io/instance: release-name
          app.kubernetes.io/component: primary
        annotations:
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
---
# Source: scribe/charts/omnirpc/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "scribe-omnirpc-test-connection"
  labels:
    helm.sh/chart: omnirpc-0.2.92
    app.kubernetes.io/name: omnirpc
    app.kubernetes.io/instance: release-name
    
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['scribe-omnirpc:80/health-check']
  restartPolicy: Never
---
# Source: scribe/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-scribe-test-connection"
  labels:
    helm.sh/chart: scribe-0.2.16
    app.kubernetes.io/name: scribe
    app.kubernetes.io/instance: release-name
    
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-scribe:80/health-check']
  restartPolicy: Never
